--- a/Assignment 15.ipynb
+++ b/Assignment 15.ipynb
@@ -19,11 +19,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "492287f1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4, 4, -1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def next_greater_elements(arr):\n",
+    "    n = len(arr)\n",
+    "    result = [-1] * n\n",
+    "    stack = []\n",
+    "\n",
+    "    for i in range(n - 1, -1, -1):\n",
+    "        while stack and arr[i] >= stack[-1]:\n",
+    "            stack.pop()\n",
+    "\n",
+    "        if stack:\n",
+    "            result[i] = stack[-1]\n",
+    "\n",
+    "        stack.append(arr[i])\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Example Test\n",
+    "arr = [1, 3, 2, 4]\n",
+    "result = next_greater_elements(arr)\n",
+    "print(result) \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -42,11 +71,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "112878a0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def nearest_smaller_elements(arr):\n",
+    "    n = len(arr)\n",
+    "    result = [-1] * n\n",
+    "    stack = []\n",
+    "\n",
+    "    for i in range(n):\n",
+    "        while stack and arr[i] < stack[-1]:\n",
+    "            stack.pop()\n",
+    "\n",
+    "        if stack:\n",
+    "            result[i] = stack[-1]\n",
+    "\n",
+    "        stack.append(arr[i])\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Example Test\n",
+    "arr = [1, 6, 2]\n",
+    "result = nearest_smaller_elements(arr)\n",
+    "print(result)  \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -74,11 +132,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b94fc87a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "from queue import Queue\n",
+    "\n",
+    "class StackUsingQueues:\n",
+    "    def __init__(self):\n",
+    "        self.q1 = Queue()\n",
+    "        self.q2 = Queue()\n",
+    "\n",
+    "    def push(self, val):\n",
+    "        self.q2.put(val)\n",
+    "\n",
+    "        while not self.q1.empty():\n",
+    "            self.q2.put(self.q1.queue[0])\n",
+    "            self.q1.get()\n",
+    "\n",
+    "        self.q1, self.q2 = self.q2, self.q1\n",
+    "\n",
+    "    def pop(self):\n",
+    "        if self.q1.empty():\n",
+    "            return None\n",
+    "        return self.q1.get()\n",
+    "\n",
+    "# Example Test\n",
+    "stack = StackUsingQueues()\n",
+    "stack.push(2)\n",
+    "stack.push(3)\n",
+    "print(stack.pop())  \n",
+    "stack.push(4)\n",
+    "print(stack.pop())  \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -94,11 +190,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d1aa53e5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Stack: [3, 2, 1, 7, 6]\n",
+      "Reversed Stack: [6, 7, 1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Stack:\n",
+    "    def __init__(self):\n",
+    "        self.items = []\n",
+    "\n",
+    "    def push(self, item):\n",
+    "        self.items.append(item)\n",
+    "\n",
+    "    def pop(self):\n",
+    "        if not self.is_empty():\n",
+    "            return self.items.pop()\n",
+    "\n",
+    "    def is_empty(self):\n",
+    "        return len(self.items) == 0\n",
+    "\n",
+    "    def reverse(self):\n",
+    "        if not self.is_empty():\n",
+    "\n",
+    "            temp = self.pop()\n",
+    "\n",
+    "            self.reverse()\n",
+    "\n",
+    "            self.insert_at_bottom(temp)\n",
+    "\n",
+    "    def insert_at_bottom(self, item):\n",
+    "        if self.is_empty():\n",
+    "            self.push(item)\n",
+    "        else:\n",
+    "            temp = self.pop()\n",
+    "            self.insert_at_bottom(item)\n",
+    "            self.push(temp)\n",
+    "\n",
+    "# Example Test\n",
+    "stack = Stack()\n",
+    "stack.push(3)\n",
+    "stack.push(2)\n",
+    "stack.push(1)\n",
+    "stack.push(7)\n",
+    "stack.push(6)\n",
+    "\n",
+    "print(\"Original Stack:\", stack.items)\n",
+    "stack.reverse()\n",
+    "print(\"Reversed Stack:\", stack.items)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -115,11 +263,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ebfd6057",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "skeeGrofskeeG\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Stack:\n",
+    "    def __init__(self):\n",
+    "        self.items = []\n",
+    "\n",
+    "    def push(self, item):\n",
+    "        self.items.append(item)\n",
+    "\n",
+    "    def pop(self):\n",
+    "        if not self.is_empty():\n",
+    "            return self.items.pop()\n",
+    "\n",
+    "    def is_empty(self):\n",
+    "        return len(self.items) == 0\n",
+    "\n",
+    "def reverse_string(S):\n",
+    "    stack = Stack()\n",
+    "\n",
+    "    for char in S:\n",
+    "        stack.push(char)\n",
+    "\n",
+    "    reversed_string = \"\"\n",
+    "    while not stack.is_empty():\n",
+    "        reversed_string += stack.pop()\n",
+    "\n",
+    "    return reversed_string\n",
+    "\n",
+    "# Test\n",
+    "S = \"GeeksforGeeks\"\n",
+    "print(reverse_string(S)) \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -138,11 +324,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "eb21f3bf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-4\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Stack:\n",
+    "    def __init__(self):\n",
+    "        self.items = []\n",
+    "\n",
+    "    def push(self, item):\n",
+    "        self.items.append(item)\n",
+    "\n",
+    "    def pop(self):\n",
+    "        if not self.is_empty():\n",
+    "            return self.items.pop()\n",
+    "\n",
+    "    def is_empty(self):\n",
+    "        return len(self.items) == 0\n",
+    "\n",
+    "def evaluate_postfix_expression(S):\n",
+    "    stack = Stack()\n",
+    "\n",
+    "    for char in S:\n",
+    "        if char.isdigit():\n",
+    "            stack.push(int(char))\n",
+    "        else:\n",
+    "            operand2 = stack.pop()\n",
+    "            operand1 = stack.pop()\n",
+    "\n",
+    "            if char == '+':\n",
+    "                result = operand1 + operand2\n",
+    "            elif char == '-':\n",
+    "                result = operand1 - operand2\n",
+    "            elif char == '*':\n",
+    "                result = operand1 * operand2\n",
+    "            elif char == '/':\n",
+    "                result = operand1 / operand2\n",
+    "                \n",
+    "                result = int(result)\n",
+    "\n",
+    "            stack.push(result)\n",
+    "\n",
+    "    return stack.pop()\n",
+    "\n",
+    "# Example Test\n",
+    "S = \"231*+9-\"\n",
+    "print(evaluate_postfix_expression(S))  \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -183,11 +420,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "386ff92a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-3\n",
+      "0\n",
+      "-2\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MinStack:\n",
+    "    def __init__(self):\n",
+    "        self.stack = []\n",
+    "        self.min_stack = []\n",
+    "\n",
+    "    def push(self, val):\n",
+    "        self.stack.append(val)\n",
+    "        if not self.min_stack or val <= self.min_stack[-1]:\n",
+    "            self.min_stack.append(val)\n",
+    "\n",
+    "    def pop(self):\n",
+    "        if self.stack:\n",
+    "            if self.stack[-1] == self.min_stack[-1]:\n",
+    "                self.min_stack.pop()\n",
+    "            self.stack.pop()\n",
+    "\n",
+    "    def top(self):\n",
+    "        if self.stack:\n",
+    "            return self.stack[-1]\n",
+    "\n",
+    "    def getMin(self):\n",
+    "        if self.min_stack:\n",
+    "            return self.min_stack[-1]\n",
+    "\n",
+    "# Example Test\n",
+    "minStack = MinStack()\n",
+    "minStack.push(-2)\n",
+    "minStack.push(0)\n",
+    "minStack.push(-3)\n",
+    "print(minStack.getMin())  \n",
+    "minStack.pop()\n",
+    "print(minStack.top())  \n",
+    "print(minStack.getMin())  \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -205,11 +486,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "91b3148a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "def trap(height):\n",
+    "    n = len(height)\n",
+    "    left, right = 0, n - 1\n",
+    "    left_max, right_max = 0, 0\n",
+    "    trapped_water = 0\n",
+    "\n",
+    "    while left < right:\n",
+    "        if height[left] < height[right]:\n",
+    "            if height[left] >= left_max:\n",
+    "                left_max = height[left]\n",
+    "            else:\n",
+    "                trapped_water += left_max - height[left]\n",
+    "            left += 1\n",
+    "        else:\n",
+    "            if height[right] >= right_max:\n",
+    "                right_max = height[right]\n",
+    "            else:\n",
+    "                trapped_water += right_max - height[right]\n",
+    "            right -= 1\n",
+    "\n",
+    "    return trapped_water\n",
+    "\n",
+    "height = [0, 1, 0, 2, 1, 0, 1, 3, 2, 1, 2, 1]\n",
+    "print(trap(height)) \n"
+   ]
   }
  ],
  "metadata": {
