Core Module Assignment

--- a/Core Module Assignment/Core Module Assignment 7.ipynb
+++ b/Core Module Assignment/Core Module Assignment 7.ipynb
@@ -1,9 +1,349 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d2aa5958",
+   "metadata": {},
+   "source": [
+    "# Core Module | Assignment 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0961d3ed",
+   "metadata": {},
+   "source": [
+    "# Q1.\n",
+    "###"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0acc9dc7",
+   "id": "658ac49f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8eb4f54b",
+   "metadata": {},
+   "source": [
+    "# Q2.\n",
+    "###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e82d1c56",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7431c9d9",
+   "metadata": {},
+   "source": [
+    "# Q3.\n",
+    "###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89805d94",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "720989fe",
+   "metadata": {},
+   "source": [
+    "# Q4.\n",
+    "###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92bf85d7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cde46114",
+   "metadata": {},
+   "source": [
+    "# Q5.\n",
+    "###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5ddb3a0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c00e5c60",
+   "metadata": {},
+   "source": [
+    "# Q6.\n",
+    "###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bca7a99d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fec435b",
+   "metadata": {},
+   "source": [
+    "# Q7.\n",
+    "###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da9689a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04bf1a68",
+   "metadata": {},
+   "source": [
+    "# Q8.\n",
+    "###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4dacf1ad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bda8c5e",
+   "metadata": {},
+   "source": [
+    "# Q9.\n",
+    "###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcc29f89",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24ef6602",
+   "metadata": {},
+   "source": [
+    "# Q10.\n",
+    "###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a200ec47",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c27998a2",
+   "metadata": {},
+   "source": [
+    "# Q11.\n",
+    "###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89f0c5f4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55dadbe5",
+   "metadata": {},
+   "source": [
+    "# Q12.\n",
+    "###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fba4db9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f1e10d8",
+   "metadata": {},
+   "source": [
+    "# Q13.\n",
+    "###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fce7b575",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d5552f6",
+   "metadata": {},
+   "source": [
+    "# Q14.\n",
+    "###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c65149bc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23e66a85",
+   "metadata": {},
+   "source": [
+    "# Q15.\n",
+    "###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0c00861",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "568618c6",
+   "metadata": {},
+   "source": [
+    "# Q16.\n",
+    "###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b317f3b2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f79ec3e",
+   "metadata": {},
+   "source": [
+    "# Q17.\n",
+    "###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e5cb154",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83e44519",
+   "metadata": {},
+   "source": [
+    "# Q18.\n",
+    "###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36e1ff6d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7886ce3f",
+   "metadata": {},
+   "source": [
+    "# Q19.\n",
+    "###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0d60126",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dae7012d",
+   "metadata": {},
+   "source": [
+    "# Q20.\n",
+    "###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ee355c0",
    "metadata": {},
    "outputs": [],
    "source": []
